Fetch ALL channel messages when moving between channels
